--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ﻿Hello, world
 <div id="armadillo">
-  <img src="armadillo-tini_tini/>
+  <img src="armadillo-tini_tini.png"/>
+</div>
+<div id="katzen">
+  <img src="bwhtjuaneyes.png"/>
 </div>
