--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿Hello, world
 <div id="armadillo">
-  <img src="armadillo-tini_tini.png"/>
+  <img src="armadillo-tini-tini.png"/>
 </div>
 <div id="katzen">
   <img src="bwhtjuaneyes.png"/>
