--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
   <img src="armadillo-tini-tini.png"/>
 </div>
 <div id="katzen">
-  <img src="bwhtjuaneyes.png"/>
+  <img src="bigjuan2.png"/>
 </div>
