--- a/index.html
+++ b/index.html
@@ -5,3 +5,9 @@
 <div id="katzen">
   <img src="bigjuan2.png"/>
 </div>
+<div id="bird">
+  <img src="bird-fountain150.png"/>
+</div>
+<div id="bird">
+  <img src="bird-fountain150.png"/>
+</div>
